# signalapps

./: .gitignore  README.md  apps.py  config.json  main.py  mocks.py  receiver.py  sender.py  signalcli.py  todo.md
apps/: tictactoe_test.py
progs/: tictactoe.py  tictactoe_test.py
prototype/: app.py  sender.py  signalcli.py  testserver.py
prototype/apps/: admin.py  tictactoe.py
signal-apps/: Cargo.toml
signal-apps-clients/: echo.py
signal-apps-clients/tictactoe/: tictactoe.py  tictactoe_test.py
signal-apps-server/: Cargo.toml  README.md  protocol.md
signal-apps-server/src/: app.rs  appstate.rs  comm.rs  main.rs  signalcli.rs
signal-apps/src/: app.rs  appstate.rs  comm.rs  main.rs  receiver.rs  sender.rs  signalcli.rs
