[package]
name = "signal-apps"
version = "0.1.0"
authors = ["Aneesh Durg <aneeshdurg17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-process = "1.0.2"
async-trait = "0.1.42"
bytes = "1.0.1"
clap = "2.33.3"
futures = "0.3.12"
futures-lite = "1.11.3"
serde_json = "1.0"
signal-hook = "0.3.6"
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
subprocess = "0.2.6"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempdir = "0.3.7"
