[package]
name = "signal-apps"
version = "0.1.0"
authors = ["Aneesh Durg <aneeshdurg17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crossbeam-utils = "0.8.2"
multiqueue = "0.3.2"
serde_json = "1.0"
signal-hook = "0.3.6"
subprocess = "0.2.6"
