[package]
name = "signal-apps"
version = "0.1.0"
authors = ["Aneesh Durg <aneeshdurg17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.0.2"
async-trait = "0.1.42"
clap = "2.33.3"
crossbeam-utils = "0.8.2"
futures = "0.3.12"
futures-lite = "1.11.3"
multiqueue = "0.3.2"
serde_json = "1.0"
signal-hook = "0.3.6"
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
subprocess = "0.2.6"
tokio = { version = "1", features = ["full"] }
